--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": ["eslint:recommended", "google", "plugin:react/recommended"],
+  "extends": ["eslint:recommended", "google"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
@@ -8,7 +8,6 @@
       "jsx": true
     }
   },
-  "plugins": ["react-hooks"],
   "globals": {
     "document": true
   },
@@ -25,13 +24,6 @@
         ]
       }
     ],
-    "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
     "require-jsdoc": 0
-  },
-  "settings": {
-    "react": {
-      "version": "detect"
-    }
   }
 }
