Adds configuration for exporting as npm package

--- a/app.json
+++ b/app.json
@@ -26,5 +26,10 @@
       "path": "../backend-repository/static",
       "publicPath": "/"
     }
+  },
+  "npm": {
+    "output": {
+      "path": "./dist/js"
+    }
   }
 }
