--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build-express": "webpack --env.express",
     "build-local": "webpack --env.local",
     "build-local-watch": "webpack --env.local --watch",
+    "build-npm": "webpack --env.npm",
     "express": "npx babel-node .",
+    "prepublishOnly": "npm run build-npm",
     "start": "npm run build-express && npm run express"
   },
   "repository": {
