--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build-local": "webpack --env.local",
     "build-local-watch": "webpack --env.local --watch",
     "build-npm": "webpack --env.npm",
-    "express": "npx babel-node .",
+    "express": "npx babel-node ./src/server",
     "prepublishOnly": "npm run build-npm",
     "start": "npm run build-express && npm run express"
   },
