--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "main": "dist",
   "scripts": {
     "build": "webpack",
-    "build-express": "webpack --env.express",
     "build-local": "webpack --env.local",
     "build-local-watch": "webpack --env.local --watch",
     "build-npm": "webpack --env.npm",
     "dev": "npx babel-node ./src/server",
     "prepublishOnly": "npm run build-npm",
-    "start": "npm run build-express && npm run express",
+    "start": "echo 'Enter your start command here'",
     "test": "echo 'Hello World'"
   },
   "repository": {
@@ -33,6 +32,7 @@
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "css-loader": "^3.6.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.3.1",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^6.11.0",
@@ -43,7 +43,6 @@
     "style-loader": "^1.2.1",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
