--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "dist",
   "scripts": {
     "build": "webpack",
-    "build-express": "webpack --env.express",
     "build-local": "webpack --env.local",
     "build-local-watch": "webpack --env.local --watch",
     "build-npm": "webpack --env.npm",
-    "express": "npx babel-node ./src/server",
+    "dev": "npx babel-node ./src/server",
     "prepublishOnly": "npm run build-npm",
-    "start": "npm run build-express && npm run express"
+    "start": "echo 'Enter your start command here'",
+    "test": "echo 'Hello World'"
   },
   "repository": {
     "type": "git",
@@ -24,30 +24,27 @@
   },
   "homepage": "https://github.com/ppak10/node-template#readme",
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "^7.9.0",
-    "@babel/node": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/node": "^7.10.3",
+    "@babel/preset-env": "^7.10.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "^4.0.0",
-    "css-loader": "^3.5.2",
-    "eslint": "^6.8.0",
+    "css-loader": "^3.6.0",
+    "dotenv": "^8.2.0",
+    "eslint": "^7.3.1",
     "eslint-config-google": "^0.14.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.3",
-    "express": "^4.17.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
-    "lint-staged": "^10.1.3",
-    "prettier": "^2.0.4",
-    "style-loader": "^1.1.3",
-    "stylelint": "^13.3.2",
+    "lint-staged": "^10.2.11",
+    "prettier": "^2.0.5",
+    "style-loader": "^1.2.1",
+    "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0",
-    "stylelint-order": "^4.0.0",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12"
   },
   "husky": {
     "hooks": {
