--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Test
 
 on:
   push:
-    branches: [ development, master ]
+    branches: []
   pull_request:
-    branches: [ development, master ]
+    branches: []
 
 jobs:
   test:
